--- a/src/index.html
+++ b/src/index.html
@@ -150,7 +150,7 @@
         </select>
       </div>
       <div class="w-9/12 ml-5 flex flex-col">
-        <p>13. Kết quả học tập THPT theo tổ hợp xét tuyển</p>
+        <p>13. Kết quả thi tốt nghiệp THPT theo tổ hợp</p>
         <div class="flex flex-col">
           <div class="flex flex-row mt-4 ml-5 max-md:flex-col">
             <label for="" class="pr-2">Môn 1: Toán</label>
